# Crypto_Social_Network

./: pyproject.toml
social_network/posts/: admin.py  models.py  urls.py  views.py
social_network/posts/migrations/: 0001_initial.py  0002_alter_posts_created_at_alter_posts_dislike_count_and_more.py
social_network/social_network/: settings.py  urls.py
social_network/templates/: base.html  index.html
social_network/users/: models.py  urls.py  views.py
social_network/users/migrations/: 0001_initial.py  0002_users_is_active_users_is_staff_users_last_login_and_more.py
social_network/users/templates/users/: register.html
